--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     --text-yellow: #dae26a;
     --text-selected: #34D399;
     --cell-size: 100px;
+
+    /* images  */
+    --female-1: url('./assets/f1.png');
+    --female-2: url('./assets/f2.png');
+    --male-1: url('./assets/m1.png');
+    --male-2: url('./assets/m2.png');
 }
 *>*{
     box-sizing: border-box;
@@ -16,7 +22,7 @@ body{
     background-color: rgb(54,54,54);
 }
 /* starting window */
-.start-game{
+.container{
     height: 100vh;
     display: flex;
     align-items: center;
@@ -51,4 +57,80 @@ body{
 }
 .start-game .profile .img > img:hover{
     background-color: var(--text-light);
+}
+.start-game.hide{
+    display: none;
+}
+
+/* game board */
+#board{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    row-gap: 3px;
+    column-gap: 3px;
+    background-color: var(--text-light);
+}
+.block{
+    width: var(--cell-size);
+    height: var(--cell-size);
+    background-color: rgb(54,54,54);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.block.x,.block.x2,
+.block.y,.block.y2{
+    cursor: not-allowed;
+}
+.board.x .block:not(.x):not(.y):hover{
+    background: var(--female-1) var(--text-yellow) no-repeat;
+    opacity: 0.4;
+}
+.board.x .block:not(.x2):not(.y2):hover{
+    background: var(--female-2) var(--text-yellow) no-repeat;
+    opacity: 0.4;
+}
+.board.x .block:not(.y):not(.x):hover{
+    background: var(--male-1) var(--text-btn) no-repeat;
+    opacity: 0.4;
+}
+.board.x .block:not(.y2):not(.x2):hover{
+    background: var(--male-2) var(--text-btn) no-repeat;
+    opacity: 0.4;
+}
+
+
+
+
+
+.block.x{
+    background: var(--female-1) var(--text-yellow) no-repeat;
+    background-size: cover;
+}
+.block.x2{
+    background: var(--female-2) var(--text-yellow) no-repeat;
+    background-size: cover;
+}
+.block.y{
+    background: var(--male-1) var(--text-btn) no-repeat;
+    background-size: cover;
+}
+.block.y2{
+    background: var(--male-2) var(--text-btn) no-repeat;
+    background-size: cover;
+}
+
+/* draw window  */
+.start-game, .draw-msg{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(49, 49, 49, 0.938);
 }
