--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body{
 }
 
 /* draw window  */
-.start-game, .draw-msg{
+.start-game, .draw-msg, .winner-msg{
     position: fixed;
     left: 0;
     right: 0;
@@ -133,4 +133,10 @@ body{
     justify-content: center;
     align-items: center;
     background: rgba(49, 49, 49, 0.938);
+}
+.draw-msg, .winner-msg{
+    display: none;
+}
+.draw-msg.show, .winner-msg.show{
+    display: flex;
 }
